Almacenamiento de Datos con MySQL en node js
